public/css/main.css
/* ... */
body{
    overflow-x: hidden;
}
.homepage,
.page{
    font-family: 'Quicksand', sans-serif;
    font-size : 13px;
}

.homepage-content{
    position: relative;
    top: 0;
}


/* TITILE & SUBTITLE & BUTTONS*/

h1.title{
    font-size: 24px;
    text-transform: uppercase;
    text-align: center;
    padding: 20px 0;
}

h3.sub-title{
    font-size: 13px;
    text-align: center;
    padding-bottom: 10px;
}

h3.small-title {
    font-size: 16px;
    text-transform: uppercase;
    padding: 15px 0;
    text-align: center;
}

.hdg-button-default{
    padding: 10px 20px;
    background-color: black;
    color: white;
    border: 0;
    text-transform: uppercase;
    font-size: 16px;
    border-radius: 0;
}

.hdg-button-small{
    padding: 5px 10px;
    background-color: black;
    color: white;
    border: 0;
    text-transform: none;
    font-size: 13px;
    border-radius: 0;
    height: 30px;
}

a{
    color: black;
    text-transform: uppercase;
}
a:hover, a:active{
    color: black;
    text-decoration: underline;
}

*:focus {
    outline: none;
}

    /* INPUT */

    input.hdg-input-default{
        height: 30px;
        min-width: 250px;
    }

/* END TITILE & SUBTITLE */


/* BEGIN ELEMENTS */

    /* NAVBAR */
    a.navbar-brand.header-logo {
        padding: 6px;
    }

    .homepage nav.navbar.navbar-inverse.navbar-fixed-top{
        background-color: rgba(0, 0, 0, 0.5);
        border-color: transparent;
        transition: all .5s ease .25s;
    }
    #nav.affix {
        background-color: black;
        -webkit-transform: translate3d(0,0,0);
        -o-transform: translate3d(0,0,0);
        transform: translate3d(0,0,0);
    }

    .navbar-nav>li>.dropdown-menu.affix{
        position: absolute;
         background-color: black;
        -webkit-transform: translate3d(0,0,0);
        -o-transform: translate3d(0,0,0);
        transform: translate3d(0,0,0);   
    }
    .navbar-nav>li>.dropdown-menu.affix-top{
        background-color: rgba(0, 0, 0, 0.5);
        border-color: transparent;
        transition: all .5s ease .25s; 
    }

    .dropdown-menu li>ul{
        padding-left: 30px;
    }

    #search-navbar-top.navbar-form i{
        color: white;
        cursor: pointer;
    }
    #search-navbar-top .form-group{
        transition: all .5s ease .25s; 
    }
    #search-navbar-top.navbar-form{
        position: relative;
        padding: 15px 10px;
        margin: 0;
    }




    .search-bloc{
        position: relative;
        height: 60px;
    }
    #search-navbar-top {
        position: absolute;
        top: 0;
        left: 0;
        width: 60px;
        height: 60px;
    }
    #label {
        width: 60px;
        height: 60px;
        position: relative;
        z-index: 20;
    }

    #search-navbar-top input {
        position: absolute;
        top: 0;
        left: 60px;
        /* width: 450px; */
        /* height: 60px; */
        z-index: 5;
        overflow: hidden;
    }
    #search-navbar-top input {
        display: block;
        position: absolute;
         top: 8px; 
        /* left: -450px; */
        /* width: 304px; */
        /* height: 100%; */
        /* margin: 0; */
        /* padding: 0 10px; */
        border: none;
        /* background-color: #23688b; */
        color: #fff;
        font-size: 18px;
        backface-visibility: none;
        border-radius: 50px;
        transition: left 0;
    }
    #search-navbar-top input:focus {
        outline: none
    }
    #search-navbar-top.focus {
        z-index: 20
    }
    #search-navbar-top.focus input {
        left: 0;
        transition: left 0.3s;
    }


    /* END NAVBAR */

/* END ELEMENTS */


/* BEGIN HOMEPAGE*/

    /* SLIDER */
    .slider-hp img{
        width: 100%;
        height: auto;
    }
    /* END SLIDER*/

    /* BLOC NOUVEAUTES */
    .nouveautes{
        position: relative;
    }

    .nouveautes h1.title{
        transform: rotate(-90deg);
        margin: 0;
        padding: 0;
        left: 0;
        top: 63px;
        position: absolute;
    }

    /* END BLOC NOUVEAUTES */

    /* BLOC AMBIANCES HOMEPAGE */
    .ambiance {
        min-height: 400px;
        background-color: #eeeeee;
        padding: 20px 0;
    }

    .ambiance img {
        width: 100%;
    }

    hr{
        width: 10%;
        border-top-color: black;
    }

    .ambiance3 {
        margin-top: 18px;
    }

    h3.show-ambiances {
        text-transform: uppercase;
        text-align: center;
        font-size: 20px;
        padding: 20px 0;
    }

    h3.show-ambiances:after {
        content: "\f054";
        font-family: FontAwesome;
        font-size: 18px;
        position: absolute;
        padding-left: 5px;
        padding-top: 2px;
    }

    .ambiance-content{
        position: relative;
        
    }

    .ambiance-content .ambiance-text{
        position: absolute;
        top: 20px;
        width: 400px;
        left: 20px;
    }

    .ambiance-content .ambiance-text .ambiance-name {
        text-transform: uppercase;
        padding-bottom: 10px;
        font-size: 20px;
    }

    .ambiance-content .ambiance-text .ambiance-desc {
        padding-bottom: 10px;
        font-size: 13px;
    }


    /* END BLOC AMBIANCES HOMEPAGE */

    /* BLOC ENGAGEMENTS */
    .engagement.row {
        color: white;
        background: #000000;
        padding: 40px 0;
        text-align: center;
    }

    .engagement p{
        font-size: 13px;
    }
    /* END BLOC ENGAGEMENT */


    /* BLOC OPPORTUNITES HOMEPAGE */

    .opportunity h1.title,
    .opportunity h3.sub-title{
        text-align: left;
    }
    .opportunity{
        min-height: 450px;
        position: relative;
    }

    .opportunity .container {
        padding: 40px 0;
    }

    .opportunity .opportunity-content p {
        font-size: 18px;
    }
    .opportunity .opportunity-img{
        width: 100%;
        position: absolute;
        height: 450px;
        z-index: -1;

    }
/* ... */

